// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 1`] = `
"  ⌂  ●❯                                                                    live
  tmux               0:main [WORKING]                                         +
 ● main             ● Codex                    [WORKING]  ⋯
 ○ website          CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

  F5 · ^q quit       Terminals  ready                            F5 split/close"
`;

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 2`] = `
"   workspace   ⌂ Home  ●❯ Terminals                                                                                live
  tmux-ide                   0:main [WORKING]                                                              + New window
 ● main                     ● Codex                    [WORKING]  ⋯
 ○ website                  CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

  F5 palette · ^q quit       Terminals / terminal  ready                                   F5 split/close · ^q put away"
`;

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 3`] = `
"   workspace  F1  ⌂ Home  F2 ●❯ Terminals                                                                                                                                                          live
  tmux-ide                   0:main [WORKING]                                                                                                                                              + New window
 ● main                     ● Codex                    [WORKING]  ⋯
 ○ website                  CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

  F5 palette · ^q quit       tmux-ide / Terminals / terminal  ready                                                                                                        F5 split/close · ^q put away"
`;

exports[`production ApplicationShellView reacts palette geometry through narrow live resizes 1`] = `
"  ⌂  ●❯                live
  ╭──────────────────────╮
 ●│ Command palette      │
 ○│ › F1 Home            │
  │ F2 Terminals         │
 A│ New terminal window  │al
 •│ Split pane right     │ F
  ╰──────────────────────╯
  F5 · ^q quit   Te…    F5 …"
`;

exports[`production ApplicationShellView reacts palette geometry through narrow live resizes 2`] = `
"  ⌂  ●❯        live
 ●╭──────────────╮
 ○│ Commands     │s…
  │ › F1 Home    │i…
 A│ F2 Terminals │
 •╰──────────────╯rm
  F5 · ^q quit  mman"
`;

exports[`production ApplicationShellView preserves canonical attention while prioritizing mixed window activity 1`] = `
"   workspace   ⌂ Home  ●❯ Terminals                                                                                live
  tmux-ide                   0:main [WORKING]                                                              + New window
 ● main                     ● Codex                    [WORKING]  ⋯ ○ Scout                       [IDLE]  ⋯
 ○ website                  CANONICAL-CELL                          CANONICAL-CELL

 Agents
 • Codex [WORKING]
 ! Scout ! [IDLE]


…

  F5 palette · ^q quit       Terminals / terminal  ready                                   F5 split/close · ^q put away"
`;
